changes in version 2.3.3 (2012-09-14)
	* added functions to read files in NCBI genomes ftp including GRange 
          objects (gff, ptt, rnt, GeneMarkHMM, Glimmer, Prodigal files) and 
          Biostrings (faa, fna, ffn, frn sequence files).  read.ncbi.ftp is a wrapper. 
        * added ftpList to list directories and files in NCBI and other ftps.  
        * deleted sra table due to recent problems with many SRA taxonomy links

changes in version 2.3.2 (2012-07-01)
        * deleted lproks tables that no longer exists (and removed related pub and 
          complete tables)
	* added abstract to ncbiPubmed

changes in version 2.3.1 (2012-04-03)
        * updated plot genomes to use other date columns like created or submitted
        * removed subset genome functions since these are not really needed
        * fixed second elink in ncbiGenome (other Genome sequences).  This was returning an
          error instead of first elink (assemblies) if no results were found. 
	* added new proks, euks, and virus genome tables from genomes/GENOME_REPORTS ftp.
	* removed old leuks and lenvs genome project tables that are no 
          longer supported (since Aug 2011). The lproks table receives only "complete" 
          genome updates and was kept for now.

changes in version 2.1.5 (2012-03-23)
	* added stop() to esearch and elink if no results found - needed if 
          nesting functions like esummary(esearch())

changes in version 2.1.4 (2012-03-13)
	* added 5 new E-utility scripts (einfo, esearch, esummary, efetch and elink)
        * updated ncbi* functions to use new e-utility functions
	* dropped required lattice package
	* updated package datasets - note that leuks, lenvs and lproks (assemblies) 
	  are no longer supported (no updates since Aug 2011). The new genome tables 
	  at www.ncbi.nlm.nih.gov/genome/browse will be included in future releases.

changes in version 2.1.3 (2012-02-13)
	* enaProject was updated to parse new XML format