@@ -1,4 +1,5 @@
 changes in version 2.3.3 (2012-09-14)
+        * update ncbiTaxonomy function due to changes in eSummary output 
 	* added functions to read files in NCBI genomes ftp including GRange 
           objects (gff, ptt, rnt, GeneMarkHMM, Glimmer, Prodigal files) and 
           Biostrings (faa, fna, ffn, frn sequence files).  read.ncbi.ftp is a wrapper. 
